--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,7 +1,7 @@
-name: Azure PS ACI GH Self Hosted Runner composite
+name: Azure PS OIDC ACI GH Self Hosted Runner Demo
 on: [push]
 jobs:
-  az-ps-aci-gh-self-hosted-runner-composite-action-oidc:
+  az-ps-oidc-aci-gh-self-hosted-runner-demo:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
