chore: fix yaml

--- a/.github/workflows/az-ps-oidc-aci-gh-self-hosted-runner-linux.yaml
+++ b/.github/workflows/az-ps-oidc-aci-gh-self-hosted-runner-linux.yaml
@@ -118,7 +118,7 @@ jobs:
 
   chatops:
     name: Send notifications with Teams
-    needs: [login-oidc]
+    needs: [provision,test,deploy]
     runs-on: ubuntu-latest
     environment: ${{ inputs.ENVIRONMENT }}
     steps:
