--- a/.github/workflows/az-ps-oidc-aci-gh-self-hosted-runner-linux.yaml
+++ b/.github/workflows/az-ps-oidc-aci-gh-self-hosted-runner-linux.yaml
@@ -10,14 +10,14 @@ on:
         description: 'App Name'
         required: true
         default: alpha-app
-      AZURE_APP_NAME: 
-        description: 'App Name'
-        required: true
-        default: alpha-app
-      AZURE_APP_NAME: 
-        description: 'App Name'
-        required: true
-        default: alpha-app
+
+env:
+  RUNNER_VERSION: 2.293.0
+  ACI_RESOURCE_GROUP: "POC-ACI-GitHub-Runners-RG"
+  ACI_NAME: "gh-runner-linux-01"
+  DNS_NAME_LABEL: "gh-lin-01"
+  GH_OWNER: "HomeAidePi-Alpha"
+  GH_REPOSITORY: "feitss-az-ps-aci-gh-self-hosted-runner-linux" #TODO Change here to deploy self hosted runner ACI to another repo.
 
 permissions:
   contents: 'read'
