--- a/.github/workflows/az-ps-oidc-aci-gh-self-hosted-runner-linux.yaml
+++ b/.github/workflows/az-ps-oidc-aci-gh-self-hosted-runner-linux.yaml
@@ -49,9 +49,9 @@ jobs:
       - name: 'Az PS Login via OIDC'
         uses: azure/login@v1.4.0
         with:
-          client-id: ${{ inputs.AZURE_AD_CLIENT_ID }}
-          tenant-id: ${{ inputs.AZURE_AD_TENANT_ID }}
-          subscription-id: ${{ inputs.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{ secrets.AZURE_AD_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_AD_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - run: |
           ./.github/workflows/azure/ps/oidc/aci/gh-self-hosted-runner/provision/Provision-RBAC-ACR.ps1
@@ -100,9 +100,9 @@ jobs:
       - name: 'Az PS Login via OIDC'
         uses: azure/login@v1.4.0
         with:
-          client-id: ${{ inputs.AZURE_AD_CLIENT_ID }}
-          tenant-id: ${{ inputs.AZURE_AD_TENANT_ID }}
-          subscription-id: ${{ inputs.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{ secrets.AZURE_AD_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_AD_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - run: |
           ./.github/workflows/azure/ps/oidc/aci/gh-self-hosted-runner/deploy/Deploy-ACR.ps1
