feat: remove env hard codes

--- a/.github/workflows/az-ps-oidc-aci-gh-self-hosted-runner-linux.yaml
+++ b/.github/workflows/az-ps-oidc-aci-gh-self-hosted-runner-linux.yaml
@@ -6,18 +6,30 @@ on:
         description: 'Environment Name'
         required: true
         default: preprod
-      AZURE_APP_NAME: 
-        description: 'App Name'
+      GH_ORG: 
+        description: 'GitHub Org Name'
         required: true
-        default: alpha-app
-
-env:
-  RUNNER_VERSION: 2.293.0
-  ACI_RESOURCE_GROUP: "POC-ACI-GitHub-Runners-RG"
-  ACI_NAME: "gh-runner-linux-01"
-  DNS_NAME_LABEL: "gh-lin-01"
-  GH_OWNER: "HomeAidePi-Alpha"
-  GH_REPOSITORY: "feitss-az-ps-aci-gh-self-hosted-runner-linux" #TODO Change here to deploy self hosted runner ACI to another repo.
+        default: HomeAidePi-Alpha
+      GH_REPOSITORY: 
+        description: 'GitHub Repo'
+        required: true
+        default: feitss-az-ps-aci-gh-self-hosted-runner-linux
+      RESOURCE_GROUP: 
+        description: 'Azure Resource Group'
+        required: true
+        default: POC-ACI-GitHub-Runners-RG
+      RUNNER_VERSION: 
+        description: 'Runner Version'
+        required: true
+        default: 2.293.0
+      ACI_NAME:
+        description: 'Azure Container Instance Name'
+        required: true
+        default: gh-runner-linux-01
+      DNS_NAME_LABEL:
+        description: 'DNS Name / Label'
+        required: true
+        default: gh-lin-01
 
 permissions:
   contents: 'read'
@@ -73,7 +85,7 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
       - run: |
-          docker build -f .github/workflows/azure/ps/oidc/aci/gh-self-hosted-runner/dockerfile --build-arg RUNNER_VERSION=${{ env.RUNNER_VERSION }} -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/az-ps-aci-gh-self-hosted-runner:${{ env.RUNNER_VERSION }} .
+          docker build -f .github/workflows/azure/ps/oidc/aci/gh-self-hosted-runner/dockerfile --build-arg RUNNER_VERSION=${{ inputs.RUNNER_VERSION }} -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/az-ps-aci-gh-self-hosted-runner:${{ inputs.RUNNER_VERSION }} .
 
       - name: "Push container image to ACR"
         uses: azure/docker-login@v1
@@ -82,7 +94,7 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
       - run: |
-          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/az-ps-aci-gh-self-hosted-runner:${{ env.RUNNER_VERSION }}
+          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/az-ps-aci-gh-self-hosted-runner:${{ inputs.RUNNER_VERSION }}
 
   test:
     runs-on: [self-hosted]
@@ -120,14 +132,14 @@ jobs:
       - name: 'Deploy to Azure Container Instances'
         uses: 'azure/aci-deploy@v1'
         with:
-          resource-group: ${{ env.ACI_RESOURCE_GROUP }}
-          image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/az-ps-aci-gh-self-hosted-runner:${{ env.RUNNER_VERSION }}
+          resource-group: ${{ inputs.RESOURCE_GROUP }}
+          image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/az-ps-aci-gh-self-hosted-runner:${{ inputs.RUNNER_VERSION }}
           registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
           registry-username: ${{ secrets.REGISTRY_USERNAME }}
           registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-          name: ${{ env.ACI_NAME }}
-          dns-name-label: ${{ env.DNS_NAME_LABEL }}
-          environment-variables: GH_TOKEN=${{ secrets.PAT_TOKEN }} GH_OWNER=${{ env.GH_OWNER }} GH_REPOSITORY=${{ env.GH_REPOSITORY }}
+          name: ${{ inputs.ACI_NAME }}
+          dns-name-label: ${{ inputs.DNS_NAME_LABEL }}
+          environment-variables: GH_TOKEN=${{ secrets.GH_TOKEN }} GH_OWNER=${{ inputs.GH_ORG }} GH_REPOSITORY=${{ inputs.GH_REPOSITORY }}
           location: 'eastus2'
           OS-type: 'Linux'
 
